refactor(auth, booking, common): improve custom exceptions and utility handling for user operations
- Renamed `CustomBusinessException` to `SpecificBusinessException` for better clarity. Updated references throughout the project.
- Simplified and refactored `AuthUtil` with streamlined exception handling. Added `LoginRequiredException` usage for unauthenticated requests.
- Adjusted `SeatHoldingServiceImpl` to follow the new `SpecificBusinessException` convention in various validation checks.
- Updated `UserBookingController` to standardize API success messages (`RESOURCE_RETRIEVED`).
- Consolidated error constants into `ErrorMessage` class for cleaner constant management.
- Removed inline user-extraction logic from `SeatmapController`, integrated `AuthUtil` to enhance testability.
- Removed unnecessary dependencies and improved imports in `AuthService`.
- Restricted cross-origin policy in `MovieController`.

This improves code readability, centralizes error messages, and ensures a cleaner implementation of exceptions.